articles/kinect-dk/api/0.6.0/index.md
# API Documentation
## [Version 0.6.0](~/api/0.6.0/index.md)
### Functions
#### [k4a_calibration_2d_to_2d](~/api/0.6.0/k4a-calibration-2d-to-2d.md)
#### [k4a_calibration_2d_to_3d](~/api/0.6.0/k4a-calibration-2d-to-3d.md)
#### [k4a_calibration_3d_to_2d](~/api/0.6.0/k4a-calibration-3d-to-2d.md)
#### [k4a_calibration_3d_to_3d](~/api/0.6.0/k4a-calibration-3d-to-3d.md)
#### [k4a_calibration_get_from_raw](~/api/0.6.0/k4a-calibration-get-from-raw.md)
#### [k4a_capture_create](~/api/0.6.0/k4a-capture-create.md)
#### [k4a_capture_get_color_image](~/api/0.6.0/k4a-capture-get-color-image.md)
#### [k4a_capture_get_depth_image](~/api/0.6.0/k4a-capture-get-depth-image.md)
#### [k4a_capture_get_image_buffer](~/api/0.6.0/k4a-capture-get-image-buffer.md)
#### [k4a_capture_get_image_descriptor](~/api/0.6.0/k4a-capture-get-image-descriptor.md)
#### [k4a_capture_get_image_exposure_usec](~/api/0.6.0/k4a-capture-get-image-exposure-usec.md)
#### [k4a_capture_get_image_iso_speed](~/api/0.6.0/k4a-capture-get-image-iso-speed.md)
#### [k4a_capture_get_image_timestamp_usec](~/api/0.6.0/k4a-capture-get-image-timestamp-usec.md)
#### [k4a_capture_get_image_white_balance](~/api/0.6.0/k4a-capture-get-image-white-balance.md)
#### [k4a_capture_get_ir_image](~/api/0.6.0/k4a-capture-get-ir-image.md)
#### [k4a_capture_get_temperature](~/api/0.6.0/k4a-capture-get-temperature.md)
#### [k4a_capture_get_temperature_c](~/api/0.6.0/k4a-capture-get-temperature-c.md)
#### [k4a_capture_reference](~/api/0.6.0/k4a-capture-reference.md)
#### [k4a_capture_release](~/api/0.6.0/k4a-capture-release.md)
#### [k4a_capture_set_color_image](~/api/0.6.0/k4a-capture-set-color-image.md)
#### [k4a_capture_set_depth_image](~/api/0.6.0/k4a-capture-set-depth-image.md)
#### [k4a_capture_set_ir_image](~/api/0.6.0/k4a-capture-set-ir-image.md)
#### [k4a_capture_set_temperature_c](~/api/0.6.0/k4a-capture-set-temperature-c.md)
#### [k4a_device_close](~/api/0.6.0/k4a-device-close.md)
#### [k4a_device_get_calibration](~/api/0.6.0/k4a-device-get-calibration.md)
#### [k4a_device_get_capture](~/api/0.6.0/k4a-device-get-capture.md)
#### [k4a_device_get_color_control](~/api/0.6.0/k4a-device-get-color-control.md)
#### [k4a_device_get_imu_sample](~/api/0.6.0/k4a-device-get-imu-sample.md)
#### [k4a_device_get_installed_count](~/api/0.6.0/k4a-device-get-installed-count.md)
#### [k4a_device_get_raw_calibration](~/api/0.6.0/k4a-device-get-raw-calibration.md)
#### [k4a_device_get_serialnum](~/api/0.6.0/k4a-device-get-serialnum.md)
#### [k4a_device_get_sync_jack](~/api/0.6.0/k4a-device-get-sync-jack.md)
#### [k4a_device_get_version](~/api/0.6.0/k4a-device-get-version.md)
#### [k4a_device_open](~/api/0.6.0/k4a-device-open.md)
#### [k4a_device_set_color_control](~/api/0.6.0/k4a-device-set-color-control.md)
#### [k4a_device_start_cameras](~/api/0.6.0/k4a-device-start-cameras.md)
#### [k4a_device_start_imu](~/api/0.6.0/k4a-device-start-imu.md)
#### [k4a_device_stop_cameras](~/api/0.6.0/k4a-device-stop-cameras.md)
#### [k4a_device_stop_imu](~/api/0.6.0/k4a-device-stop-imu.md)
#### [k4a_image_create](~/api/0.6.0/k4a-image-create.md)
#### [k4a_image_create_from_buffer](~/api/0.6.0/k4a-image-create-from-buffer.md)
#### [k4a_image_get_buffer](~/api/0.6.0/k4a-image-get-buffer.md)
#### [k4a_image_get_exposure_usec](~/api/0.6.0/k4a-image-get-exposure-usec.md)
#### [k4a_image_get_format](~/api/0.6.0/k4a-image-get-format.md)
#### [k4a_image_get_height_pixels](~/api/0.6.0/k4a-image-get-height-pixels.md)
#### [k4a_image_get_iso_speed](~/api/0.6.0/k4a-image-get-iso-speed.md)
#### [k4a_image_get_size](~/api/0.6.0/k4a-image-get-size.md)
#### [k4a_image_get_stride_bytes](~/api/0.6.0/k4a-image-get-stride-bytes.md)
#### [k4a_image_get_timestamp_usec](~/api/0.6.0/k4a-image-get-timestamp-usec.md)
#### [k4a_image_get_white_balance](~/api/0.6.0/k4a-image-get-white-balance.md)
#### [k4a_image_get_width_pixels](~/api/0.6.0/k4a-image-get-width-pixels.md)
#### [k4a_image_reference](~/api/0.6.0/k4a-image-reference.md)
#### [k4a_image_release](~/api/0.6.0/k4a-image-release.md)
#### [k4a_image_set_exposure_time_usec](~/api/0.6.0/k4a-image-set-exposure-time-usec.md)
#### [k4a_image_set_iso_speed](~/api/0.6.0/k4a-image-set-iso-speed.md)
#### [k4a_image_set_timestamp_usec](~/api/0.6.0/k4a-image-set-timestamp-usec.md)
#### [k4a_image_set_white_balance](~/api/0.6.0/k4a-image-set-white-balance.md)
#### [k4a_transformation_color_image_to_depth_camera](~/api/0.6.0/k4a-transformation-color-image-to-depth-camera.md)
#### [k4a_transformation_create](~/api/0.6.0/k4a-transformation-create.md)
#### [k4a_transformation_depth_image_to_color_camera](~/api/0.6.0/k4a-transformation-depth-image-to-color-camera.md)
#### [k4a_transformation_depth_image_to_point_cloud](~/api/0.6.0/k4a-transformation-depth-image-to-point-cloud.md)
#### [k4a_transformation_destroy](~/api/0.6.0/k4a-transformation-destroy.md)
### Structures
#### [k4a_calibration_extrinsics_t](~/api/0.6.0/k4a-calibration-extrinsics-t.md)
#### [k4a_calibration_intrinsics_t](~/api/0.6.0/k4a-calibration-intrinsics-t.md)
#### [k4a_calibration_t](~/api/0.6.0/k4a-calibration-t.md)
#### [k4a_camera_calibration_t](~/api/0.6.0/k4a-camera-calibration-t.md)
#### [k4a_device_configuration_t](~/api/0.6.0/k4a-device-configuration-t.md)
#### [k4a_float2_t::_xy](~/api/0.6.0/k4a-float2-t-xy.md)
#### [k4a_float3_t::_xyz](~/api/0.6.0/k4a-float3-t-xyz.md)
#### [k4a_hardware_version_t](~/api/0.6.0/k4a-hardware-version-t.md)
#### [k4a_image_descriptor_t](~/api/0.6.0/k4a-image-descriptor-t.md)
#### [k4a_imu_sample_t](~/api/0.6.0/k4a-imu-sample-t.md)
#### [k4a_intrinsic_parameters_t::_param](~/api/0.6.0/k4a-intrinsic-parameters-t-param.md)
#### [k4a_transformation_xy_tables_t](~/api/0.6.0/k4a-transformation-xy-tables-t.md)
#### [k4a_version_t](~/api/0.6.0/k4a-version-t.md)
### Definitions
#### [K4A_DECLARE_HANDLE](~/api/0.6.0/K4A-DECLARE-HANDLE.md)
#### [K4A_DEVICE_DEFAULT](~/api/0.6.0/K4A-DEVICE-DEFAULT.md)
#### [K4A_FAILED](~/api/0.6.0/K4A-FAILED.md)
#### [K4A_INVALID_TIMESTAMP](~/api/0.6.0/K4A-INVALID-TIMESTAMP.md)
#### [K4A_SUCCEEDED](~/api/0.6.0/K4A-SUCCEEDED.md)
#### [K4A_WAIT_INFINITE](~/api/0.6.0/K4A-WAIT-INFINITE.md)
### Typedefs
#### [k4a_memory_destroy_cb_t](~/api/0.6.0/k4a-memory-destroy-cb-t.md)
### Enumerations
#### [k4a_buffer_result_t](~/api/0.6.0/k4a-buffer-result-t.md)
#### [k4a_calibration_model_type_t](~/api/0.6.0/k4a-calibration-model-type-t.md)
#### [k4a_calibration_type_t](~/api/0.6.0/k4a-calibration-type-t.md)
#### [k4a_color_control_command_t](~/api/0.6.0/k4a-color-control-command-t.md)
#### [k4a_color_control_mode_t](~/api/0.6.0/k4a-color-control-mode-t.md)
#### [k4a_color_resolution_t](~/api/0.6.0/k4a-color-resolution-t.md)
#### [k4a_depth_mode_t](~/api/0.6.0/k4a-depth-mode-t.md)
#### [k4a_firmware_build_t](~/api/0.6.0/k4a-firmware-build-t.md)
#### [k4a_firmware_signature_t](~/api/0.6.0/k4a-firmware-signature-t.md)
#### [k4a_fps_t](~/api/0.6.0/k4a-fps-t.md)
#### [k4a_image_format_t](~/api/0.6.0/k4a-image-format-t.md)
#### [k4a_result_t](~/api/0.6.0/k4a-result-t.md)
#### [k4a_wait_result_t](~/api/0.6.0/k4a-wait-result-t.md)
#### [k4a_wired_sync_mode_t](~/api/0.6.0/k4a-wired-sync-mode-t.md)
### Handles
#### [k4a_capture_t](~/api/0.6.0/k4a-capture-t.md)
#### [k4a_device_t](~/api/0.6.0/k4a-device-t.md)
#### [k4a_image_t](~/api/0.6.0/k4a-image-t.md)
#### [k4a_transformation_t](~/api/0.6.0/k4a-transformation-t.md)
